0.6.10/_sources/gettingstarted/examples/index.rst
.. _examples-index:

=================
Example's gallery
=================

Many examples on the use of the API can be found in this gallery.

Notebook and standalone python scripts can be downloaded using the link at the bottom of each example.

Please note that the number of examples is currently quite limited. We are actively working to improve this.
If you have examples to suggest from your own use of spectrochempy, don't hesitate to suggest them
in the `discussions <https://github.com/spectrochempy/spectrochempy/discussions>`__ or by creating a pull-request.

.. contents:: Table of Contents
   :local:
   :depth: 2

.. include:: gallery/auto_examples_core/index.rst
    :start-after: :orphan:
    :end-before: `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_

.. include:: gallery/auto_examples_analysis/index.rst
    :start-after: :orphan:
    :end-before: `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_

.. include:: gallery/auto_examples_processing/index.rst
    :start-after: :orphan:
    :end-before: `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
