1.0.0/_sources/gettingstarted/examples/index.rst
.. _examples-gallery:
.. _examples-index:

=================
Example's gallery
=================

Many examples on the use of the API can be found in this gallery.

Notebook and standalone python scripts can be downloaded using the link at the bottom of each example.

Please note that the number of examples is currently quite limited. We are actively working to improve this.
If you have examples to suggest from your own use of spectrochempy, don't hesitate to suggest them
in the `discussions <https://github.com/spectrochempy/spectrochempy/discussions>`__ or by creating a pull-request.

.. contents:: Table of Contents
   :local:
   :depth: 2

.. toctree::
   :maxdepth: 2
   :titlesonly:
   :caption: Examples

   gallery/auto_examples_core/index
   gallery/auto_examples_analysis/index
   gallery/auto_examples_processing/index
   gallery/auto_examples_plugins/index
